# RateXp

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  CITATION.md  CLA.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml  pyproject.toml
.github/DISCUSSION_TEMPLATE/: announcements.yml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: ci.yml
app/: .dockerignore  Dockerfile
app/app-be/: config.py  config.yaml  db.py  models.py  pyproject.toml  server.py
app/app-be/tests/: conftest.py  test_cors.py  test_server.py
app/app-fe/: index.html  package-lock.json  package.json
app/app-fe/src/: App.jsx  index.css
core/: Dockerfile  atif.py  config.py  config.yaml  db.py  ingest.py  mcp_app.py  migrate.py  models.py  pyproject.toml  ratelimit.py  redact.py  server.py  store.py
core/migrations/: 001_feedback.sql  002_transcript.sql
core/prompt/: prompt.md  skip.md
core/redaction_adapters/: __init__.py  azure.py  base.py  presidio.py
core/scripts/: capture_transcript.sh  detect_agent.sh  submit.sh  upload_transcript.sh
core/tests/: conftest.py  test_atif.py  test_feedback.py  test_mcp.py  test_redact.py  test_redact_azure.py  test_redact_presidio.py  test_security.py  test_snippet.py  test_transcript.py
examples/cheerful/: SKILL.md
examples/goodbye/: SKILL.md
examples/poem-creator/: .mcp.json  SKILL.md
examples/redaction-test/: SKILL.md
functions/skills-consumer/: .dockerignore  .env.example  Dockerfile  config.yaml  function_app.py  local.settings.json.example  pyproject.toml  requirements.txt  seeder.py
functions/skills-consumer/seed/: __init__.py  function.json
functions/skills-consumer/skills/: ATTRIBUTION.md
functions/skills-consumer/skills/handoff/: SKILL.md
functions/skills-consumer/skills/migrate-to-shoehorn/: SKILL.md
functions/skills-consumer/skills/setup-pre-commit/: SKILL.md
functions/skills-consumer/skills/to-issues/: SKILL.md
functions/skills-consumer/skills/to-prd/: SKILL.md
functions/skills-consumer/tests/: conftest.py  test_seeder.py
infra/: README.md  grant-db-access.sql  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
template/: .mcp.json  SKILL.md
tests/: README.md  conftest.py  requirements.txt  test_azure_live.py  test_end_to_end.py  test_smoke.py
