[project]
name = "ratexp-core"
version = "1.0.0"
description = "RateXp public ingestion service: hosts the MCP server and stores feedback."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "mcp>=1.27",
]

[project.optional-dependencies]
# Microsoft Entra ID database auth (cloud). Not needed for local password auth.
entra = ["azure-identity>=1.16"]
# Azure AI Language PII redaction for stored transcripts (see redact.py). Only
# needed when redaction.enabled is true in config.yaml. Authenticates via the
# Managed Identity (azure-identity), so no key is needed.
redaction = ["azure-ai-textanalytics>=5.3", "azure-identity>=1.16"]
test = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "mcp_app", "ingest", "models", "migrate", "atif", "config", "db", "store", "ratelimit", "redact"]
