[project]
name = "ratexp-core"
version = "1.0.0"
description = "RateXp public ingestion service: hosts the MCP server and stores feedback."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "mcp>=1.27",
]

[project.optional-dependencies]
# Microsoft Entra ID database auth (cloud). Not needed for local password auth.
entra = ["azure-identity>=1.16"]
# Redaction adapters (see redaction_adapters/). Install the one that matches
# config.yaml redaction.provider:
#   redaction-presidio - self-hosted (default); also needs per-language spaCy
#                        models at build time (the Dockerfile downloads them).
#   redaction-azure    - Azure AI Language; authenticates via the Managed Identity.
redaction-presidio = ["presidio-analyzer>=2.2", "presidio-anonymizer>=2.2", "spacy>=3.7", "langdetect>=1.0.9"]
redaction-azure = ["azure-ai-textanalytics>=5.3", "azure-identity>=1.16"]
test = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "mcp_app", "ingest", "models", "migrate", "atif", "config", "db", "store", "ratelimit", "redact"]
packages = ["redaction_adapters"]
