[project]
name = "ratexp-app-be"
version = "1.0.0"
description = "RateXp dashboard service: read-only API over feedback, plus the dashboard UI."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pyyaml>=6.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
]

[project.optional-dependencies]
# Microsoft Entra ID database auth (cloud). Not needed for local password auth.
entra = ["azure-identity>=1.16"]
test = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["server", "models", "config", "db"]
