[project]
name = "ratexp-skills-consumer"
version = "1.0.0"
description = "RateXp demo seeder: an agent uses a skill, then submits feedback."
requires-python = ">=3.12"
# Runtime deps live in requirements.txt (the Azure Functions image installs from it).
dynamic = ["dependencies"]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["seeder"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
